<resources>
    <string name="app_name">NewsBOLT</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_logo">app_logo</string>
    <string name="login_signup">Login / Signup</string>
    <string name="name_hint">What name should we call you</string>
    <string name="email_hint">Enter your Email ID</string>
    <string name="otp_hint">Enter OTP</string>
    <string name="submit_btn_text">Submit</string>
    <string name="login_btn_text">Login</string>
    <string name="resend_text">Resend OTP</string>
    <string name="otp_sent_text">email@email.com</string>
    <string name="title_otp_sent_text">OTP sent to</string>
    <string name="title_otp">Live informed</string>
    <string name="back_button_des">back button_login</string>
    <string name="version_1_0_1">Version 1.0.1</string>
    <string name="logout">Logout</string>
    <string name="disappearing_favourite">Disappearing favourite</string>
    <string name="personalise_my_choice">Personalise my choice</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_in_with_email">Log-in with email</string>
    <string name="submit_button_text">Submit</string>
    <string name="continue_button_text">Continue</string>
    <string name="select_nlanguage">Select\nLanguage</string>
    <string name="upto_4">(Upto 4)</string>
    <string name="scroll_down_button">scroll_down_button</string>
    <string name="no_internet_category">Kindly connect with internet\n Tap here to retry again</string>
    <string name="some_thing_went_wrong">Something went wrong\n Tap here to retry again</string>
    <string name="camra_permission_msg">Allow camera permission to take picture</string>
    <string name="default_notification_channel_id">1</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="save">Save</string>

    <string name="share">Share</string>
    <string name="enter_your_comments">Enter your comments</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_otp">Enter OTP</string>
    <string name="no_comments">No Comment Found</string>
    <string name="track_info">Track Info</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="profileimage">profileImage</string>

</resources>