<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".user.ui.fragment.LoginFragment"
    android:background="#1E1E1E">

    <ImageView
        android:id="@+id/app_logo_login"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_60sdp"
        android:src="@drawable/app_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:contentDescription="@string/app_logo"/>

    <TextView
        android:id="@+id/login_signup_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_signup"
        android:layout_marginStart="@dimen/_30sdp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginBottom="@dimen/_50sdp"
        android:textStyle="bold"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toTopOf="@+id/name_text_input"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/name_text_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginStart="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_30sdp"
        app:layout_constraintBottom_toTopOf="@id/email_text_input"
        android:layout_marginBottom="@dimen/_20sdp"
        android:hint="@string/name_hint"
        android:textColor="@color/white"
        android:autofillHints="name"
        android:inputType="textPersonName"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/roboto_regular"
        android:paddingStart="@dimen/_12sdp"
        tools:ignore="RtlSymmetry"/>

    <EditText
        android:id="@+id/email_text_input"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_background"
        android:layout_marginStart="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_30sdp"
        app:layout_constraintBottom_toTopOf="@id/submit_button"
        android:hint="@string/email_hint"
        android:textColor="@color/white"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/white"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginBottom="@dimen/_80sdp"
        android:paddingStart="@dimen/_12sdp"
        tools:ignore="RtlSymmetry"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:backgroundTint="#4E547B"
        android:text="@string/submit_btn_text"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:fontFamily="@font/roboto_regular"
        app:cornerRadius="@dimen/_5sdp"/>



</androidx.constraintlayout.widget.ConstraintLayout>