<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".user.ui.fragment.LanguageFragment">

    <TextView
        android:id="@+id/language_txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="@dimen/margin_top_back_button"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/select_nlanguage"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/video_page_text_size_xxxxlarge"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/selected_count_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/upto_4"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/video_page_text_size_xxxlarge"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/language_txt_title" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_top_back_button"
        android:paddingBottom="10dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/continue_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/selected_count_txt">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/choice_chip_group"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="@dimen/margin_start"
            android:layout_marginEnd="@dimen/margin_end"
            app:chipSpacingHorizontal="24dp"
            app:chipSpacingVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:singleLine="false"
            app:singleSelection="false" />

    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/continue_button"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/margin_end"
        android:background="@drawable/follow_background"
        android:paddingStart="@dimen/margin_top_back_button"
        android:paddingEnd="@dimen/margin_top_back_button"
        android:text="@string/submit_button_text"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/video_page_text_size_xxlarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>