<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black">


    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/splash_logo"
        android:layout_margin="@dimen/margin_start"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/title_otp_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_otp_sent_text"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_regular"
        android:textStyle="bold"
        android:textSize="@dimen/video_page_text_size_xxlarge"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/email_otp_txt"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/email_otp_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_regular"
        android:textStyle="bold"
        android:textSize="@dimen/video_page_text_size_xxlarge"
        tools:text="email@email.com"
        android:layout_marginStart="@dimen/margin_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/margin_top_back_button"
        app:layout_constraintBottom_toTopOf="@id/email_con_layout"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/email_con_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/edit_text_height"
        android:layout_marginStart="@dimen/margin_start"
        android:layout_marginEnd="@dimen/margin_end"
        android:layout_marginBottom="@dimen/login_edit_text_margin_bottom"
        android:background="@drawable/follow_background"
        android:minHeight="50dp"
        app:layout_constraintBottom_toTopOf="@id/submit_button_const"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <EditText
            android:id="@+id/otp_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@null"
            android:fontFamily="sans-serif"
            android:hint="@string/enter_your_otp"
            android:inputType="number"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/video_page_text_size_xxlarge"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/submit_button_const"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/follow_background">

        <TextView
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/margin_end"
            android:paddingStart="@dimen/margin_top_back_button"
            android:paddingEnd="@dimen/margin_top_back_button"
            android:gravity="center"
            android:text="@string/submit_button_text"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/video_page_text_size_xxlarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ProgressBar
        android:id="@+id/progress_bar_otp"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginEnd="10dp"
        android:padding="3dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>