<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/frame_parent_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@drawable/page_item_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >
        <!-- Start - It holds PlayerView -->
        <FrameLayout
            android:id="@+id/player_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            />
        <!-- End - It holds PlayerView -->

        <!-- Start - It holds PreviewImage on Top of PlayerView -->
        <ImageView
            android:id="@+id/preview_image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ContentDescription"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/backgrounds/scenic" />
        <!-- End - It holds PreviewImage on Top of PlayerView -->

    </FrameLayout>

    <TextView
        android:id="@+id/video_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/video_page_text_size_xxxlarge"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"/>


    <!-- Start - It holds Play/Pause Icon of Player -->
    <ImageView
        android:id="@+id/play_pause"
        android:layout_width="@dimen/play_pause_start_side_length"
        android:layout_height="@dimen/play_pause_start_side_length"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#B3FFFFFF"
        tools:srcCompat="@drawable/play" />
    <!-- End - It holds Play/Pause Icon of Player -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1H"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.885" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_1V"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.87" />

    <!-- Start Left Part - Title -->
        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:paddingTop="10dp"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:lineHeight="17dp"
            android:maxLines="3"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/video_page_text_size_large"
            android:visibility="visible"
            android:paddingEnd="4dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline_1H"
            app:layout_constraintEnd_toStartOf="@+id/guideline_1V"
            app:layout_constraintStart_toStartOf="parent" />
    <!-- End Left Part  - Title-->

    <!-- Start Left Part - Video Source -->
    <TextView
        android:id="@+id/videoSource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:fontFamily="sans-serif-medium"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="10sp"
        android:visibility="visible"
        android:text="View Source"
        android:drawableStart="@drawable/link"
        android:drawablePadding="7dp"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent" />
    <!-- End Left Part  - Video Source-->

    <!-- Start - Right Part - It holds Like, Comment, Share, Save -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/rightPart"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_1H"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="invisible">

        <!-- Start - Comment -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >


            <ImageView
                android:id="@+id/comment"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:background="@null"
                android:scaleType="centerInside"
                android:padding="6dp"
                android:src="@drawable/comment_icon"
                app:layout_constraintBottom_toTopOf="@id/msgCount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/msgCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="3dp"
                android:fontFamily=""
                android:text="120k"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/comment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- End - Comment -->

        <!-- Start - Share -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/share"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:scaleType="centerInside"
                android:src="@drawable/share_icon"
                android:padding="6dp"
                app:layout_constraintBottom_toTopOf="@id/shareTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/shareTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="sans-serif"
                android:text="@string/share"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/share" />


        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- End - Share -->

        <!-- Start - Save -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/save"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/bookmark_icon"
                android:padding="6dp"
                app:layout_constraintBottom_toTopOf="@id/saveTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/saveTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="Save"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/save" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- End - Save -->

        <!-- Start - Like New -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/like"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/like_icon"
                android:padding="6dp"
                app:layout_constraintBottom_toTopOf="@id/likeTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/likeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/like" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <!-- End - Like New -->

        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="const_like,const_share,const_save,const_comment"
            app:flow_horizontalAlign="start"
            app:flow_horizontalStyle="packed"
            app:flow_maxElementsWrap="1"
            app:flow_verticalAlign="top"
            app:flow_verticalGap="30dp"
            app:flow_verticalStyle="packed"
            app:flow_wrapMode="chain"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <!-- End - Right Part - It holds Like, Comment, Share, Save -->


    <!-- Start - It is used to show video's track info -->
    <Button
        android:id="@+id/trackInfo_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/track_info"
        android:visibility="gone"
        />
    <!-- Start - It is used to show video's track info -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <LinearLayout
        android:id="@+id/adsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:background="@android:color/holo_green_dark"
        android:visibility="gone">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Click to see the ads"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>